tests/errors/compiler/test.c
void main()
{
	int arr[10];
	if (arr)
	{
		print(arr);
	}
	ВЫХОД;
}